--- a/UI/Test/AcidWashOrdersDialog.xaml
+++ b/UI/Test/AcidWashOrdersDialog.xaml
@@ -7,13 +7,13 @@
         Title="Acid Wash Orders Dialog" Height="400" Width="550" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView Name="ListViewCaseList" Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" ItemsSource="{Binding Path=AcidWashSearchList}" FontSize="12" Width="510" MouseDoubleClick="ListViewCaseList_MouseDoubleClick">
+        <ListView Name="ListViewAcidWashList" Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" ItemsSource="{Binding Path=AcidWashList}" FontSize="12" HorizontalAlignment="Stretch" MouseDoubleClick="ListViewAcidWashList_MouseDoubleClick">
             <ListView.View>
                 <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Case List">
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="85" />
