--- a/UI/Surgical/DictationTemplatePage.xaml
+++ b/UI/Surgical/DictationTemplatePage.xaml
@@ -10,19 +10,16 @@
         
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="*"></RowDefinition>
+			<RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="4*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Specimen:" HorizontalAlignment="Left"></TextBlock>
-        <ListBox Name="ListBoxSpecimenOrders" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontSize="20" ItemsSource="{Binding Path=AccessionOrder.SpecimenOrderCollection}" SelectionChanged="ListBoxSpecimen_SelectionChanged">
+        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" Text="Specimen:" HorizontalAlignment="Left"></TextBlock>
+        <ListBox Name="ListBoxSpecimenOrders" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontSize="14" ItemsSource="{Binding Path=AccessionOrder.SpecimenOrderCollection}" SelectionChanged="ListBoxSpecimen_SelectionChanged">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
@@ -31,48 +28,12 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        
-        <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal">
-            <TextBlock Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Template:" HorizontalAlignment="Left"></TextBlock>
-            <TextBlock  Margin="2,2,2,2" Text="{Binding Path=DictationTemplate.TemplateName}" FontSize="20"></TextBlock>
-        </StackPanel>
-        <TextBox Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=GrossDictation.Preamble}" FontSize="20"></TextBox>
-        
 
-        <Grid Grid.Column="1" Grid.Row="0" Grid.RowSpan="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>                
-            </Grid.RowDefinitions>
-
-            <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Spoken Phrases:" HorizontalAlignment="Left"></TextBlock>
-            <ListBox Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontSize="20" ItemsSource="{Binding Path=DictationTemplate.WordList}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
-                            <TextBlock Margin="2" Text="{Binding Path=Word}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-
-            <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Typing:" HorizontalAlignment="Left"></TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=DictationTemplate.TranscribedWords}" FontSize="26"></TextBox>
-        
-        </Grid>
-                       
-        <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="Paragraph:" HorizontalAlignment="Left"></TextBlock>        
-        <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=DictationTemplate.TranscribedText}" FontSize="20"></TextBox>
-
-        <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
-            <Button Margin="2,2,2,2" Width="200" Height="50" VerticalAlignment="Top" HorizontalAlignment="Left" Click="ButtonCreateParagraph_Click">Create Paragraph</Button>
-            <Button Margin="2,2,2,2" Width="200" Height="50" VerticalAlignment="Top" HorizontalAlignment="Left" Click="AddToGross_Click">Add To Gross</Button>
-        </StackPanel>
-        
+        <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" FontSize="14" FontWeight="Bold" Text="Typing:" HorizontalAlignment="Left"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Right">                    
+            <Hyperlink Click="HyperLinkAddDicationToGross_Click">Add Dictation To Gross</Hyperlink>
+        </TextBlock>
+        <TextBox Name="TextBoxGrossDescription"  Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=GrossDescription}" FontSize="14" KeyUp="TextBoxGrossDescription_KeyUp"></TextBox>
 
     </Grid>
 </UserControl>
