--- a/UI/Test/ComprehensiveColonCancerProfilePage.xaml
+++ b/UI/Test/ComprehensiveColonCancerProfilePage.xaml
@@ -32,26 +32,20 @@
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="20"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="*"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 				</Grid.RowDefinitions>
 
-				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Result Sets</TextBlock>				
+				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>				
 
-				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
-				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">
+				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">
 						<TextBlock Text="Unfinalize Results" />
 					</Hyperlink>
@@ -92,24 +86,6 @@
 
 					<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,5" FontWeight="Bold">Surgical Diagnosis:</TextBlock>
 					<TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=ComprehensiveColonCancerProfileResult.SurgicalSpecimen.Diagnosis}" TextWrapping="Wrap" />
-
-					<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,5" FontWeight="Bold">MLH1 Result:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="3" Margin="2,2,2,5" Text="{Binding Path=ComprehensiveColonCancerProfileResult.IHCResult.MLH1Result.Description}" />
-
-					<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,5" FontWeight="Bold">MSH2 Result:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="4" Margin="2,2,2,5" Text="{Binding Path=ComprehensiveColonCancerProfileResult.IHCResult.MSH2Result.Description}" />
-
-					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,5" FontWeight="Bold">MSH6 Result:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,5" Text="{Binding Path=ComprehensiveColonCancerProfileResult.IHCResult.MSH6Result.Description}" />
-
-					<TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,5" FontWeight="Bold">PMS2 Result:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="6" Margin="2,2,2,5" Text="{Binding Path=ComprehensiveColonCancerProfileResult.IHCResult.PMS2Result.Description}" />
-
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,5" FontWeight="Bold">KRAS Result:</TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="7" Margin="2,2,2,5" Text="{Binding Path=ComprehensiveColonCancerProfileResult.KRASStandardTestOrder.Result}" />
-
-					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,5" FontWeight="Bold">BRAF Result:</TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="8" Margin="2,2,2,5" Text="{Binding Path=ComprehensiveColonCancerProfileResult.BRAFV600EKTestOrder.Result}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,5" FontWeight="Bold">Interpretation:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="9" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
