--- a/UI/Surgical/SurgicalReview.xaml
+++ b/UI/Surgical/SurgicalReview.xaml
@@ -303,7 +303,7 @@
                     <Hyperlink Name="HyperLinkFS" Click="HyperLinkFS_Click" Tag="{Binding}" IsEnabled="{Binding ElementName=SurgicalReviewControl, Path=DataContext.FieldEnabler.IsUnprotectedEnabled}">Fs:</Hyperlink>
 				</TextBlock>
 
-				<TextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Stretch" Height="75" Margin="2,2,2,2" AcceptsReturn="True" TextWrapping="Wrap"
+				<TextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Stretch" Height="75" Margin="2,2,2,2" AcceptsReturn="True" TextWrapping="Wrap" KeyUp="TextBox_KeyUp"
 						 Text="{Binding Path=Result}" 
 						 IsEnabled="{Binding ElementName=SurgicalReviewControl, Path=DataContext.FieldEnabler.IsProtectedEnabled}">
 				</TextBox>
