--- a/UI/Surgical/DictationTemplatePage.xaml
+++ b/UI/Surgical/DictationTemplatePage.xaml
@@ -33,7 +33,8 @@
         <TextBlock Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Right">                    
             <Hyperlink Click="HyperLinkAddDicationToGross_Click">Add Dictation To Gross</Hyperlink>
         </TextBlock>
-        <TextBox Name="TextBoxGrossDescription"  Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=GrossDescription}" FontSize="14" KeyUp="TextBoxGrossDescription_KeyUp"></TextBox>
+        <TextBox Name="TextBoxGrossDescription"  Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=GrossDescription}" 
+                 FontSize="14" KeyUp="TextBoxGrossDescription_KeyUp" AcceptsTab="True" PreviewKeyDown="TextBoxGrossDescription_PreviewKeyDown"></TextBox>
 
     </Grid>
 </UserControl>
