--- a/UI/Common/UserPreferences.xaml
+++ b/UI/Common/UserPreferences.xaml
@@ -23,6 +23,8 @@
 			<RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -172,9 +174,18 @@
                   HorizontalAlignment="Stretch" Text="{Binding Path=UserPreference.ThermoFisherSlidePrinter}">
         </ComboBox>
 
-        <Button Name="ButtonTestBlockPrinter" Grid.Column="0" Grid.Row="25" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="ButtonTestBlockPrinter_Click"  Width="130" Height="30">Test Cassette Printer</Button>
+        <TextBlock Grid.Column="0" Grid.Row="25" Margin="2" VerticalAlignment="Center" TextAlignment="Right">Laser Cassette Printer:</TextBlock>
+        <ComboBox Grid.Column="1" Grid.Row="25" Name="ComboBoxLaserCassettePrinter" Margin="2"
+                  IsEditable="True" Text="{Binding Path=UserPreference.LaserCassettePrinter}" HorizontalAlignment="Stretch">
+            <ComboBoxItem>\\10.1.1.92\pulsar\</ComboBoxItem>
+        </ComboBox>
 
-		<StackPanel Grid.Column="1" Grid.Row="26" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">            
+        <TextBlock Grid.Column="0" Grid.Row="26" Margin="2,2,2,2" VerticalAlignment="Center" TextAlignment="Right">Use Laser Cassette Printer:</TextBlock>
+        <CheckBox Grid.Column="1" Grid.Row="26" Margin="2,2,2,2" IsChecked="{Binding Path=UserPreference.UseLaserCassettePrinter}" HorizontalAlignment="Stretch"></CheckBox>
+        
+        <Button Name="ButtonTestBlockPrinter" Grid.Column="0" Grid.Row="27" Margin="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="ButtonTestBlockPrinter_Click"  Width="130" Height="30">Test Cassette Printer</Button>
+
+		<StackPanel Grid.Column="1" Grid.Row="28" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">            
             <Button Name="ButtonOK" Margin="2" HorizontalAlignment="Center" Click="ButtonOK_Click" Width="50" Height="30">OK</Button>
             <Button Name="ButtonCancel" Margin="2" HorizontalAlignment="Center" Click="ButtonCancel_Click" Width="50" Height="30">Cancel</Button>
         </StackPanel>
