--- a/UI/Test/BCellClonalityByPCRResultPage.xaml
+++ b/UI/Test/BCellClonalityByPCRResultPage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Test.BCellClonalityByPCRResultPage"
+﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Test.BCellClonalityByPCRResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
     <Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition></ColumnDefinition>
@@ -187,4 +188,4 @@
 		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
 
 	</Grid>
-</UserControl>
+</Test:ResultControl>
