--- a/UI/Client/ProviderLookupDialog.xaml
+++ b/UI/Client/ProviderLookupDialog.xaml
@@ -102,6 +102,7 @@
                                 </ListView.View>
                             </ListView>
 
+                            <Button Grid.Row="1" Grid.Column="0" Margin="5" Height="30" Width="100" HorizontalAlignment="Left" Content="Add" Click="ButtonAddClientLocation_Click" />
                             <Button Grid.Row="1" Grid.Column="0" Margin="5" Height="30" Width="100" HorizontalAlignment="Right" Content="OK" Click="ButtonOK_Click" />
 
                         </Grid>
