--- a/UI/MaterialTracking/MaterialTrackingStartPage.xaml
+++ b/UI/MaterialTracking/MaterialTrackingStartPage.xaml
@@ -42,6 +42,9 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="20"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="20"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>                    
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
@@ -67,18 +70,25 @@
 				    <Hyperlink Click="HyperlinkReceiveMaterialFromDrClegg_Click">Receive Material From Dr. Clegg</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2">Location Cody</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2">
+				    <Hyperlink Click="HyperlinkSendMaterialToDrKurtzman_Click">Send Material to Dr. Kurtzman</Hyperlink>
+                </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2">
+				    <Hyperlink Click="HyperlinkReceiveMaterialFromDrKurtzman_Click">Receive Material From Dr. Kurtzman</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2">Location Cody</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkSendMaterialFromCodyToBillings_Click">Send Material to Billings</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2">
+                <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkReceiveMaterialFromBillings_Click">Receive Material From Billings</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2">
+                <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkViewSelectedBatch_Click">View Selected Batch</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2">
+                <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkDeleteSelectedBatch_Click">Delete Selected Batch</Hyperlink>
                 </TextBlock>
 
