--- a/UI/Monitor/AutopsyRequestMonitorPage.xaml
+++ b/UI/Monitor/AutopsyRequestMonitorPage.xaml
@@ -1,7 +1,23 @@
 ﻿<UserControl x:Class="YellowstonePathology.UI.Monitor.AutopsyRequestMonitorPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">	
 	<Grid>
-		
+		<TextBox Name="MyRectangle" Text="There is an unread message from Dr. Kurtzman for Histology" FontSize="46" Foreground="#e12d0e" 
+		         HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="10" Margin="10,10,10,10" Padding="10,10,10,10">
+			<TextBox.BorderBrush>
+                <SolidColorBrush x:Name="redBrush" Color="Red" />
+			</TextBox.BorderBrush>
+
+  			<TextBox.Triggers>      
+				<EventTrigger RoutedEvent="Rectangle.Loaded">
+                	<BeginStoryboard>
+                	    <Storyboard>
+                        	<ColorAnimation Storyboard.TargetName="redBrush" Storyboard.TargetProperty="Color" From="Red" To="White" Duration="0:0:1" 
+                        	                AutoReverse="True" RepeatBehavior="Forever"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+  			</TextBox.Triggers>
+		</TextBox>
 	</Grid>
 </UserControl>
