--- a/UI/MaterialTracking/MaterialTrackingStartPage.xaml
+++ b/UI/MaterialTracking/MaterialTrackingStartPage.xaml
@@ -45,6 +45,9 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="20"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="20"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>                    
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
@@ -77,18 +80,25 @@
 				    <Hyperlink Click="HyperlinkReceiveMaterialFromDrKurtzman_Click">Receive Material From Dr. Kurtzman</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2">Location Cody</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2">
+				    <Hyperlink Click="HyperlinkSendMaterialToDrShannon_Click">Send Material to Dr. Shannon</Hyperlink>
+                </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2">
+				    <Hyperlink Click="HyperlinkReceiveMaterialFromDrShannon_Click">Receive Material From Dr. Shannon</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2">Location Cody</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkSendMaterialFromCodyToBillings_Click">Send Material to Billings</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2">
+                <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkReceiveMaterialFromBillings_Click">Receive Material From Billings</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2">
+                <TextBlock Grid.Column="0" Grid.Row="17" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkViewSelectedBatch_Click">View Selected Batch</Hyperlink>
                 </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2">
+                <TextBlock Grid.Column="0" Grid.Row="18" Margin="2,2,2,2">
 				    <Hyperlink Click="HyperlinkDeleteSelectedBatch_Click">Delete Selected Batch</Hyperlink>
                 </TextBlock>
 
