--- a/UI/Test/EgfrToAlkReflexPage.xaml
+++ b/UI/Test/EgfrToAlkReflexPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Test.EGFRToALKReflexPage"
+<UserControl x:Class="YellowstonePathology.UI.Test.EGFRToALKReflexPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -114,6 +114,7 @@
                         <ColumnDefinition Width="*"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"></RowDefinition>
@@ -218,6 +219,39 @@
                         </Grid>
                     </Border>
 
+                    <Border Grid.Column="3" Grid.Row="1">
+                        <Border.Style>
+                            <Style>
+                                <Setter Property="Border.Background" Value="{Binding Path=EGFRToALKReflexAnalysisResult.EGFRToALKReflexAnalysisPDL1Result.Status, Converter={StaticResource EGFRToALKReflexAnalysisStatusColorConverter}}"/>
+                                <Setter Property="Border.BorderBrush" Value="Gray"/>
+                                <Setter Property="Border.BorderThickness" Value="1"/>
+                                <Setter Property="Border.Padding" Value="1"/>
+                            </Style>
+                        </Border.Style>
+                        <Grid Width="200" Height="60" Margin="2,2,2,2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                                <RowDefinition Height="*"></RowDefinition>
+                            </Grid.RowDefinitions>
+
+                            <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" Margin="2,2,2,2" HorizontalAlignment="Right">Test:</TextBlock>
+                            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Path=EGFRToALKReflexAnalysisResult.EGFRToALKReflexAnalysisPDL1Result.TestAbbreviation}" Margin="2,2,2,2"/>
+
+                            <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold" Margin="2,2,2,2" HorizontalAlignment="Right">Status:</TextBlock>
+                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Path=EGFRToALKReflexAnalysisResult.EGFRToALKReflexAnalysisPDL1Result.Status}" Margin="2,2,2,2"/>                            
+
+                            <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="2,2,2,2" HorizontalAlignment="Right">Result:</TextBlock>
+                            <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding Path=EGFRToALKReflexAnalysisResult.EGFRToALKReflexAnalysisPDL1Result.ResultAbbreviation}" Margin="2,2,2,2"/>
+
+                        </Grid>
+                    </Border>
+
                 </Grid>
                 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Ordered On:</TextBlock>
@@ -232,17 +266,20 @@
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">QNS for ROS1:</TextBlock>
                 <CheckBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.QNSForROS1}" Checked="CheckBoxQNSForROS1_Checked" Unchecked="CheckBoxQNSForROS1_Unchecked"/>
 
-                <TextBlock Grid.Column="0" Grid.Row="5" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">QNS for PDL1:</TextBlock>
+                <CheckBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.QNSForPDL1}" Checked="CheckBoxQNSForPDL1_Checked" Unchecked="CheckBoxQNSForPDL1_Unchecked"/>
 
-				<TextBlock Grid.Column="0" Grid.Row="7" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Grid.Column="0" Grid.Row="6" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
+				<TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-				<TextBlock Grid.Column="0" Grid.Row="9" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.References}" TextWrapping="Wrap" AcceptsReturn="True" />
+				<TextBlock Grid.Column="0" Grid.Row="8" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
+				<TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-				<TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="11" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
-				<ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" Margin="2,2,2,2" HorizontalAlignment="Stretch"
+				<TextBlock Grid.Column="0" Grid.Row="10" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
+				<TextBox Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.References}" TextWrapping="Wrap" AcceptsReturn="True" />
+
+				<TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
+				<ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="13" Margin="2,2,2,2" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}">
 					<ListView.View>
 						<GridView>
@@ -255,13 +292,13 @@
 					</ListView.View>
 				</ListView>				
 
-				<TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-				<CheckBox Grid.Column="1" Grid.Row="13" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Distribute}"></CheckBox>
+				<TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
+				<CheckBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Distribute}"></CheckBox>
 
-				<TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-				<CheckBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.NoCharge}"></CheckBox>
+				<TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+				<CheckBox Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.NoCharge}"></CheckBox>
 
-				<Grid Grid.Column="0" Grid.Row="15" Grid.ColumnSpan="2">
+				<Grid Grid.Column="0" Grid.Row="16" Grid.ColumnSpan="2">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="Auto"></ColumnDefinition>
 						<ColumnDefinition Width="*"></ColumnDefinition>
